minio/minio-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
  namespace: minio-dev 
spec:
  clusterIP: None
  ports:
    - port: 9000
      name: minio
  selector:
    app: minio
