minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio-dev 
spec:
  type: LoadBalancer
  ports:
    - name: api
      port: 6544
      targetPort: 9000
      protocol: TCP
    - name: web
      port: 6543
      targetPort: 9001
  selector:
    app: minio
