minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-dev
  annotations:
spec:
  rules:
  - host: minio.kubernetes.net
    http:
      paths:
        - pathType: Prefix
          path: /ui
          backend:
            service:
              name: minio-service
              port:
                number: 9001
        - pathType: Prefix
          path: /
          backend:
            service:
              name: minio-service
              port:
                number: 9000
